==> lizhiok/FPInterro/Libraries/MDK_LIB/RL/FlashFS/Drivers/NAND_SAM3X.c <==
#include <File_Config.h>
#include <string.h>
#include <sam3xa.h>
#include "NAND_SAM3x.h"
#define NAND_HW_CS_0  0x00
#define NAND_HW_BUS   0x00
#define NAND_DMA_EN      1
#define NAND_DMA_CH      0
#define NAND_HW_ECC   0x00
#define NAND_CHIP_CNT    1
#define SMC_DATA8         *((U8  *)(0x60000000 + 0x1000000 * NAND_HW_CS_0))
#define SMC_DATA16        *((U16 *)(0x60000000 + 0x1000000 * NAND_HW_CS_0))

static U32 PageRead (U32 row, U8 *buf, NAND_DRV_CFG *cfg) {
  U32 i, cs, cyc, ecc, cmdAddr;

  /* Set address */
  cyc = cfg->AddrCycles;
  if (cyc == 5) {
    SMC->SMC_ADDR = 0;
  }

  cs = CsCfg[cfg->DrvInst];

  /* Set and execute read command */
  cmdAddr = NFC_CMD_BASE | (NAND_CMD_READ1ST <<  2)| /* Read 1st Cycle      */
                           (NAND_CMD_READ2ND << 10)| /* Read 2nd Cycle      */
                           (1 << 18)               | /* Execute CMD2        */ 
                           (cyc              << 19)| /* Set address cycles  */
                           (cs               << 22)| /* Set chip select     */
                           (1 << 25)               ; /* Auto read after cmd */

  SMC_WRITE_CMD (cmdAddr, row << 8);
  
  /* Wait until transfer done: Tout ~10msec @ 100MHz */
  for (i = NAND_TIMEOUT; i; i--) {
    if (SMC->SMC_SR & NFC_XFR_DONE) break;
  }
  if (i == 0) { return ERR_NAND_HW_TOUT; }

  ecc = ECC_NOERR;

  if (NAND_HW_ECC) {
    /* Hardware ECC */
  }

  /* Transfer data */
  if (NAND_DMA_EN) {
    /* Use DMA */
    DMAC->DMAC_CH_NUM[NAND_DMA_CH].DMAC_SADDR = NFC_SRAM_BASE_ADDR;
    DMAC->DMAC_CH_NUM[NAND_DMA_CH].DMAC_DADDR = (U32)buf;
    DMAC->DMAC_CH_NUM[NAND_DMA_CH].DMAC_CTRLA = cfg->PageSize;
    DMAC->DMAC_CHER |= (1 << NAND_DMA_CH);

    /* Wait until transfer done: Tout ~10msec @ 100MHz */
    for (i = NAND_TIMEOUT; i; i--) {
      if (!(DMAC->DMAC_CHSR & (1 << NAND_DMA_CH))) break;
    }
    if (i == 0) { return ERR_NAND_DMA_TOUT; }
  }
  else {
    /* Read Data */
    memcpy (buf, (U8 *)NFC_SRAM_BASE_ADDR, cfg->PageSize);
  }
  
  if (ecc & ECC_UNCORRECTED) {
    return ERR_ECC_UNCOR;
  }
  if (ecc & ECC_CORRECTED) {
    return ERR_ECC_COR;
  }

  return RTV_NOERR;
}

static U32 PageWrite (U32 row, U8 *buf, NAND_DRV_CFG *cfg) {
  U8 status, *nfcBuf;
  U32 i, cs, spSz, adrCyc, cmdAddr;

  /* Transfer data */
  if (NAND_DMA_EN) {
    /* Use DMA */
    DMAC->DMAC_CH_NUM[NAND_DMA_CH].DMAC_SADDR = (U32)buf;
    DMAC->DMAC_CH_NUM[NAND_DMA_CH].DMAC_DADDR = NFC_SRAM_BASE_ADDR;
    DMAC->DMAC_CH_NUM[NAND_DMA_CH].DMAC_CTRLA = cfg->PageSize;
    DMAC->DMAC_CHER |= (1 << NAND_DMA_CH);
  
    /* Wait until transfer done: Tout ~10msec @ 100MHz */
    for (i = NAND_TIMEOUT; i; i--) {
      if (!(DMAC->DMAC_CHSR & (1 << NAND_DMA_CH))) break;
    }
    if (i == 0) { return ERR_NAND_DMA_TOUT; }
  }
  else {    
    /* Write data to NFC SRAM */
    memcpy ((U8 *)NFC_SRAM_BASE_ADDR, buf, cfg->PageSize);
  }

  /* Set address */
  adrCyc = cfg->AddrCycles;

  if (adrCyc == 5) {
    SMC->SMC_ADDR = 0;
  }
  
  cs = CsCfg[cfg->DrvInst];

  /* Set and execute write command */
  cmdAddr = NFC_CMD_BASE | (NAND_CMD_PROG1ST <<  2)| /* Pg Program 1st Cycle */
                           (adrCyc           << 19)| /* Set address cycles   */
                           (cs               << 22)| /* Set chip select      */
                           (1 << 25)               | /* Auto write after cmd */
                           (1 << 26)               ; /* NFC writes data      */
  SMC_WRITE_CMD (cmdAddr, row << 8);
  
  /* Wait until transfer done: Tout ~10msec @ 100MHz */
  for (i = NAND_TIMEOUT; i; i--) {
    if (SMC->SMC_SR & NFC_XFR_DONE) break;
  }
  if (i == 0) { return ERR_NAND_HW_TOUT; }

  if (NAND_HW_ECC) {
    /* Hardware ECC */  
  }

  /* Write spare area */
  nfcBuf = (U8 *)(NFC_SRAM_BASE_ADDR + cfg->PgLay->SpareOfs);

  spSz = (cfg->PageSize / 512) * 16;

  if (NAND_HW_BUS) {
    for (i = 0; i < spSz; i += 2) {
      SMC_DATA16 = ((U16)nfcBuf[i + 1] << 8) | nfcBuf[i];
    }
  }
  else {
    for (i = 0; i < spSz; i++) {
      SMC_DATA8 = nfcBuf[i];
    }
  }

  /* Send Program2 command */
  cmdAddr = NFC_CMD_BASE | (NAND_CMD_PROG2ND << 2) | (cs << 22);
  SMC_WRITE_CMD (cmdAddr, 0);

  /* Wait Ready/Busy: Tout ~10msec @ 100MHz */
  for (i = NAND_TIMEOUT; i; i--) {
    if (SMC->SMC_SR & NFC_RB_RISE) break;
  }
  if (i == 0) { return ERR_NAND_HW_TOUT; }

  /* Check status */
  cmdAddr = NFC_CMD_BASE | (NAND_CMD_STATUS << 2) | (cs << 22);
  SMC_WRITE_CMD (cmdAddr, 0);
  status = SMC_DATA8;

  if (status & NAND_STAT_FAIL) {
    return ERR_NAND_PROG;
  }
  return RTV_NOERR;
}

static U32 BlockErase (U32 row, NAND_DRV_CFG *cfg) {
  U8 status;
  U32 i, cs, cmdAddr;

  cs = CsCfg[cfg->DrvInst];

  /* Set and execute erase command */
  cmdAddr = NFC_CMD_BASE | (NAND_CMD_ERASE1ST <<  2) | /* Erase 1st Cycle    */
                           (NAND_CMD_ERASE2ND << 10) | /* Erase 2md Cycle    */
                           (1 << 18)                 | /* Execute CMD2       */
                           (3 << 19)                 | /* Set address cycles */
                           (cs                << 22) ; /* Set chip select    */

  SMC_WRITE_CMD (cmdAddr, row);

  /* Wait Ready/Busy: Tout ~10msec @ 100MHz */
  for (i = NAND_TIMEOUT; i; i--) {
    if (SMC->SMC_SR & NFC_RB_RISE) break;
  }
  if (i == 0) { return ERR_NAND_HW_TOUT; }
  
  /* Check status */
  cmdAddr = NFC_CMD_BASE | (NAND_CMD_STATUS << 2) | (cs << 22);
  SMC_WRITE_CMD (cmdAddr, 0);
  status = SMC_DATA8;

  if (status & NAND_STAT_FAIL) {
    return ERR_NAND_ERASE; 
  }
  return RTV_NOERR;
}

static U32 UnInit (NAND_DRV_CFG *cfg) {
  /* PIO Write Protect Disable */
  PIOB->PIO_WPMR = PIO_WPDIS_KEY;

  /* Release NFC peripheral pins to PIO */
  PIOC->PIO_PER   =  0x001BFFFC;                    // D0..D15, NANDOE, NANDWE
  PIOD->PIO_PER   =  0x00000300;                    // NANDALE, NANDCLE
  PIOA->PIO_PER   =  0x00000004;                    // NANDRDY
  PIOA->PIO_ABSR &= ~0x00000004;

  return RTV_NOERR;
}

static U32 Init (NAND_DRV_CFG *cfg) {
  U8 pgSz, status;
  U32 i, cs, inst, cmdAddr;

  inst = cfg->DrvInst;
  if (inst >= NAND_CHIP_CNT) return ERR_INVALID_PARAM;
  
  /* Set hardware parameters */
  pgSz = 0x00;
  switch (cfg->PageSize) {
    case 528:
      break;
    case 2112:
      pgSz = 0x02;
      break;
    case 4224:
      pgSz = 0x03;
      break;
    default:
      return ERR_NAND_UNSUPPORTED;
  }

  /* Setup Page Data Layout */
  SetPageLayout (cfg);

  /* Configure Power Management Controller: Enable SMC and PIO clocks */
  PMC->PMC_WPMR  = PMC_WPDIS_KEY;                   /* Disable write protect  */
  PMC->PMC_PCER0 = (1 << ID_SMC) | (1 << ID_PIOA) | (1 << ID_PIOC)
                                 | (1 << ID_PIOD) | (1 << ID_PIOE);
  PMC->PMC_WPMR  = PMC_WPEN_KEY;                    /* Enable write protect   */

  /* PIO Write Protect Disable */
  PIOB->PIO_WPMR = PIO_WPDIS_KEY;

  /* Configure PIO Controller: Assign SMC to peripheral function */
  PIOA->PIO_PDR   =  0x00000004;                    // NANDRDY
  PIOA->PIO_ABSR |=  0x00000004;
  PIOC->PIO_PDR   =  0x001BFFFC;                    // D0..D15, NANDOE, NANDWE
  PIOC->PIO_ABSR &= ~0x001BFFFC;
  PIOD->PIO_PDR   =  0x00000300;                    // NANDALE, NANDCLE
  PIOD->PIO_ABSR &= ~0x00000300;

  /* Disable SMC Write Protection */
  SMC->SMC_WPCR = SMC_WPDIS_KEY;

  /* Enable NAND Flash Controller */
  SMC->SMC_CTRL = 1;

  /* Set NFC Configuration Register */
  SMC->SMC_CFG = (pgSz & 0x03) | (1UL <<  9) | // Set page size, Read Spare Area
                                 (0   << 12) | // Rising edge is detected 
                                 (1UL << 16) | // Set Data Timeout Cycle Number
                                 (7UL << 20) ; // Set Data Timeout Multiplier
  /* Select SRAM Bank 0 */
  SMC->SMC_BANK = 0;  

  /* Enable Auto Chip Select Control */
  cs = CsCfg[inst];

  EnableAutoCS(cs);

  /* Configure timing and signals */
  SMC->SMC_CS_NUMBER[cs].SMC_SETUP =   (0 <<  0) | // Write Enable Setup Length
                                       (1 <<  8) | // CS Setup length in Write Access
                                       (0 << 16) | // Read Enable Setup Length
                                       (1 << 24) ; // CS Setup length in Read Access
  
  SMC->SMC_CS_NUMBER[cs].SMC_PULSE =   (3 <<  0) | // Write Enable Pulse Length
                                       (4 <<  8) | // CS Pulse length in Write Access
                                       (3 << 16) | // Read Enable Pulse Length
                                       (4 << 24) ; // CS Pulse length in Read Access
  
  SMC->SMC_CS_NUMBER[cs].SMC_CYCLE =   (4 <<  0) | // Total Write Cycle Length
                                       (7 << 16) ; // Total Read Cycle Length
  
  SMC->SMC_CS_NUMBER[cs].SMC_TIMINGS = (1 <<  0) | // CLE to RE Low Delay
                                       (7 <<  4) | // ALE to Data Start
                                       (1 <<  8) | // ALE to RE Low Delay
                                       (1 << 16) | // Ready to RE Low Delay
                                       (7 << 24) | // WE High to RE Busy
                             ((cs & 0x03) << 28) | // R/B Line Selection
                                      (1U << 31) ; // NAND Flash Selection

  SMC->SMC_CS_NUMBER[cs].SMC_MODE =    (1 <<  0) | // read is controlled by NRD signal
                                       (1 <<  1) ; // write is controlled by NWE signal

  if (NAND_HW_BUS == NAND_BUS_W16) {
  SMC->SMC_CS_NUMBER[cs].SMC_MODE |=   (0 <<  8) | // NCS, NWE, NRD
                                       (1 << 12) ; // 16-bit bus width
  }

  if (NAND_HW_ECC) {
    /* Configure Hardware ECC module */
    if (NAND_HW_BUS == NAND_BUS_W16) {
      /* 1 bit correction for a page - only mode for 16 bit devices */
      SMC->SMC_ECC_MD = pgSz & 0x03;
    }
    else {
      /* 1 bit correction per 256 bytes of data for 8 bit devices */
      SMC->SMC_ECC_MD = pgSz | (2 << 4);
    }

    SMC->SMC_ECC_CTRL = 3;
  }

  /* Configure DMA if enabled */
  if (NAND_DMA_EN) { 
    /* Disable DMA Write Protection */
    PMC->PMC_WPMR  = PMC_WPDIS_KEY;
    /* Enable DMA peripheral clock */    
    PMC->PMC_PCER1  = (1 << (ID_DMAC - 32));

    /* Read channel status, clear and disable pending interrupts */
    DMAC->DMAC_CHSR;
    DMAC->DMAC_EBCISR;
    DMAC->DMAC_CHDR |= 1 << (8 + NAND_DMA_EN);
    for (i = NAND_TIMEOUT; i; i--) {
      if (!(DMAC->DMAC_CHSR & (1 << NAND_DMA_CH))) break;
    }
    if (i == 0) { return ERR_NAND_DMA_TOUT; }
    DMAC->DMAC_EBCIDR |= 0x010101 << NAND_DMA_CH;
  
    /* Enable DMA */
    DMAC->DMAC_EN = 1;

    /* Channel configuration */
    DMAC->DMAC_CH_NUM[NAND_DMA_CH].DMAC_CTRLB = (1UL << 16) | (1UL << 20);
    DMAC->DMAC_CH_NUM[NAND_DMA_CH].DMAC_CFG   = (1UL << 16) |  /* Stop on Done En. */
                                                (1UL << 24) ;  /* AHB Protection   */
  }

  /* Disable Scrambling */
  SMC->SMC_OCMS = 0x00;

  /* Reset flash chip - set and execute reset command */
  cmdAddr = NFC_CMD_BASE | (NAND_CMD_RESET << 2) | (cs << 22);
  SMC_WRITE_CMD (cmdAddr, 0);
  
  /* Wait Ready/Busy: Tout ~10msec @ 100MHz */
  for (i = NAND_TIMEOUT; i; i--) {
    if (SMC->SMC_SR & NFC_RB_RISE) break;
  }
  if (i == 0) { return ERR_NAND_HW_TOUT; }

  for (i = NAND_TIMEOUT; i; i--) {
    /* Check status */
    cmdAddr = NFC_CMD_BASE | (NAND_CMD_STATUS  <<  2) | (cs << 22);
    SMC_WRITE_CMD (cmdAddr, 0);
    status = SMC_DATA8;
    if (status & NAND_STAT_RDY) {
      return RTV_NOERR; 
    }
  }
  return ERR_NAND_HW_TOUT;
}
